# msgpack-pjsekai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  publish-packages.yml
cli/: CMakeLists.txt  main.c
docs/: generated-output.md  publishing.md  serialization.md
msgpack/: CMakeLists.txt  msgpack-pjsekai.files  msgpack-pjsekai.h
msgpack/wrappers/go/: README.md  go.mod  msgpack_pjsekai.go
msgpack/wrappers/java/: README.md  pom.xml
msgpack/wrappers/java/src/main/java/io/github/sekaiworld/msgpackpjsekai/: MsgpackPjsekai.java
msgpack/wrappers/java/src/main/native/: msgpack-pjsekai-bridge.h  msgpack_pjsekai_jni.c
msgpack/wrappers/js/: README.md  build-wasm.sh  msgpack-pjsekai-wasm.d.ts  msgpack-pjsekai-wasm.js  msgpack-pjsekai-wasm.wasm  msgpack-pjsekai.d.ts  msgpack-pjsekai.js  package.json
msgpack/wrappers/python/: MANIFEST.in  README.md  pyproject.toml
msgpack/wrappers/python/msgpack_pjsekai/: __init__.py  __init__.pyi
